--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/theme"
         android:title="@string/tema_escuro"
         android:icon="@drawable/ic_brightness_6_black_24dp"/>
+    <item
+        app:showAsAction="ifRoom"
+        android:id="@+id/search"
+        android:title="Pesquisar"
+        android:icon="@drawable/ic_search_black_24dp" />
+
+
 
     <item
         android:id="@+id/navigation_about"
