--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,22 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:fontFamily">@font/nunito_semibold</item>
+        <item name="android:font">@font/nunito_semibold</item>
         <item name="overlaycolor">@color/oblack</item>
-           <item name="titlecolor">@color/colorPrimary</item>
+        <item name="titlecolor">@color/colorPrimary</item>
         <item name="dialogbackcolor">@color/white</item>
         <item name="actionbarcolor">@color/white</item>
         <item name="textcolor">@color/black</item>
         <item name="hintcolor">@color/grey_300</item>
-        <item name="backgroundcolor">@color/grey_100</item>
-         <item name="android:textColorHighlight">@color/colorPrimary</item>
+        <item name="backgroundcolor">@color/white</item>
+        <item name="android:textColorHighlight">@color/colorPrimary</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
 
 
@@ -21,12 +24,11 @@
     <style name="AppTheme.Night" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="overlaycolor">@color/owhite</item>
-        <item name="android:statusBarColor">@color/grey_900</item>
-        <item name="actionbarcolor">@color/grey_900</item>
+         <item name="actionbarcolor">@color/grey_900</item>
         <item name="hintcolor">@color/grey_600</item>
          <item name="titlecolor">#BA68C8</item>
         <item name="textcolor">@color/white</item>
-        <item name="backgroundcolor">@color/grey_800</item>
+        <item name="backgroundcolor">@color/grey_900</item>
         <item name="android:textColorHighlight">@color/colorPrimary</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
